--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     width:100%;
     min-height:100vh;
-    background-image:url(images/background.png);
+    background-image:url(background.png);
     background-size:cover;
     background-position: center;
     position: relative;
